--- a/app.json
+++ b/app.json
@@ -5,18 +5,21 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/logo.png",
-    "scheme": "socialapp",
+    "scheme": "whispr",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.raiyan2002.whispr"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/logo.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#3b82f6"
       },
-      "edgeToEdgeEnabled": true
+      "package": "com.raiyan2002.whispr",
+      "allowBackup": false,
+      "edgeToEdgeEnabled": false
     },
     "web": {
       "bundler": "metro",
@@ -31,7 +34,15 @@
           "image": "./assets/images/logo.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#3b82f6"
+        }
+      ],
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "usesCleartextTraffic": true
+          }
         }
       ]
     ],
@@ -44,6 +55,7 @@
         "projectId": "8d5dbcb2-aa60-4404-9073-3df978a409a2"
       }
     },
-    "owner": "raiyan2002"
+    "owner": "raiyan2002",
+    "description": "A modern social media app for connecting with friends and sharing moments"
   }
 }
