--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/config-plugins": "~10.1.1",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@supabase/supabase-js": "^2.50.0",
-    "expo": "~53.0.12",
-    "expo-router": "~5.1.0",
+    "expo": "53.0.17",
+    "expo-build-properties": "~0.14.8",
+    "expo-router": "~5.1.3",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.4",
-    "react-native-safe-area-context": "^5.4.1"
+    "react-native": "0.79.5",
+    "react-native-safe-area-context": "5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
